Added missing files for sample data population

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,10 +16,8 @@
 <% else %>
   <div class="center hero-unit">
     <h1>Welcome to Fagin</h1>
- 
-    <h2>An app to help you pick what's in your Pocket</h2>
-
     <%= image_tag("fagin.gif", alt:"Fagin") %>
+    <h2>Pick what's in your Pocket</h2>
 
     <%= link_to "Sign in with Pocket", signup_path, class: "btn btn-large btn-primary" %>
 
