Adding initial omniauth for pocket

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,14 +4,7 @@
       <section>
         <%= render 'shared/user_info' %>
       </section>
-      <section>
-        <%= render 'shared/micropost_form' %>
-      </section>
     </aside>
-    <div class="span8">
-      <h3>Micropost Feed</h3>
-      <%= render 'shared/feed' %>
-    </div>
   </div>
 <% else %>
   <div class="center hero-unit">
@@ -19,7 +12,7 @@
     <%= image_tag("fagin.gif", alt:"Fagin") %>
     <h2>Pick what's in your Pocket</h2>
 
-    <%= link_to "Sign in with Pocket", signup_path, class: "btn btn-large btn-primary" %>
+    <%= link_to "Sign in with Pocket", "auth/pocket", class: "btn btn-large btn-primary" %>
 
   </div>
 
