Work in progress for pocket signup

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
     <%= image_tag("fagin.gif", alt:"Fagin") %>
     <h2>Pick what's in your Pocket</h2>
 
-    <%= link_to "Sign in with Pocket", "auth/pocket", class: "btn btn-large btn-primary" %>
+    <%= link_to "Sign in with Pocket", signup_path, class: "btn btn-large btn-primary" %>
 
   </div>
 
