--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -6,8 +6,5 @@
 <%= f.label :email %>
 <%= f.text_field :email %>
 
-<%= f.label :password %>
-<%= f.password_field :password %>
-
-<%= f.label :password_confirmation, "Confirm Password" %>
-<%= f.password_field :password_confirmation %>
+<%= f.label :email_confirmation, "Confirm Email" %>
+<%= f.text_field :email_confirmation %>
