--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
               </ul>
             </li>
           <% else %>
-            <li><%= link_to "Sign in", 'auth/pocket' %></li>
+            <li><%= link_to "Sign in", '/auth/pocket' %></li>
           <% end %>
         </ul>
       </nav>
