--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,16 @@
         <%= render 'shared/user_info' %>
       </section>
     </aside>
+    <%= button_to "Fetch New Pocket Articles",
+                { :controller => 'users',
+                  :action => "populate_articles",
+                  :since => current_user.last_fetch},
+                  class: "btn" %>
+    <%= button_to "Fetch All Pocket Articles",
+                { :controller => 'users',
+                  :action => "populate_articles"},
+                  :data => {confirm: "Are you sure?\nThis action will fetch your full Pocket list and may take a long time." },
+                  class: "btn" %>
   </div>
 <% else %>
   <div class="center hero-unit">
