Moving fetch to separate model to benefit from REST actions

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,9 @@
         <%= render 'shared/user_info' %>
       </section>
     </aside>
+    <%= button_to (@fetch), class: "btn" do %>
+      Test
+    <% end %>
     <%= button_to "Fetch New Pocket Articles",
                 { :controller => 'users',
                   :action => "populate_articles",
