--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -5,10 +5,10 @@
 <span>
   <%= link_to "view my profile", current_user %>
   <p> Last update:
-    <% if current_user.last_fetch.nil? %>
+    <% if current_user.fetches.maximum(:created_at).nil? %>
       Never
     <% else %>
-      <%= time_ago_in_words(Time.at(current_user.last_fetch)) %> ago 
+      <%= time_ago_in_words(Time.at(current_user.fetches.maximum(:created_at))) %> ago
     <% end %>
   </p>
 </span>
