--- a/app/views/shared/_fetch_form.html.erb
+++ b/app/views/shared/_fetch_form.html.erb
@@ -1,5 +1,8 @@
-<%= form_for(@article) do |f| %>
+<%= form_for(@fetch) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
-  <%= f.check_box :full %>
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
   <%= f.submit "Post", class: "btn btn-large btn-primary" %>
 <% end %>
