Adding update fetch on login after initial fetch

--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -11,4 +11,7 @@
       <%= time_ago_in_words(Time.at(current_user.fetches.maximum(:created_at))) %> ago
     <% end %>
   </p>
+  <p>
+    <%= pluralize(current_user.fetches.first.articles.count, "article") unless current_user.fetches.maximum(:created_at).nil? %>
+  </p>
 </span>
