--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -12,6 +12,6 @@
     <% end %>
   </p>
   <p>
-    <%= pluralize(current_user.fetches.first.articles.count, "article") unless current_user.fetches.maximum(:created_at).nil? %>
+    <%= pluralize(current_user.count_articles, "article") unless current_user.fetches.maximum(:created_at).nil? %>
   </p>
 </span>
