--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "Help",    help_path %></li>
           <% if signed_in? %>
-            <li><%= link_to "Push",  push_path %></li>
+            <li><%= link_to "Push",  new_push_path %></li>
             <li id="fat-menu" class="dropdown">
               <a href='#' class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
