--- a/app/views/pushes/new.html.erb
+++ b/app/views/pushes/new.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title, 'Push') %>
 <h1>Push</h1>
 <p>Push updates to Pocket</p>
+<%= form_for @push do |f| %>
+  <%= f.submit "Tag long articles", class: "btn btn-large btn-primary" %>
+<% end %>
+
