--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,17 @@
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "Help",    help_path %></li>
           <% if signed_in? %>
-            <li><%= link_to "Push",  push_path %></li>
+            <li id="fat-menu" class="dropdown">
+              <a href="http://google.com" class="dropdown-toggle" data-toggle="dropdown">
+                Push <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Create new tagger", '#' %></li>
+                <li><%= link_to "Manage existing taggers", '#' %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Tag Analysis", '#' %></li>
+              </ul>
+            </li>
             <li id="fat-menu" class="dropdown">
               <a href='#' class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
