--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,11 +8,11 @@
           <li><%= link_to "Help",    help_path %></li>
           <% if signed_in? %>
             <li id="fat-menu" class="dropdown">
-              <a href="http://google.com" class="dropdown-toggle" data-toggle="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Push <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Create new tagger", '#' %></li>
+                <li><%= link_to "Create new tagger", push_path %></li>
                 <li><%= link_to "Manage existing taggers", '#' %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Tag Analysis", '#' %></li>
