--- a/app/views/pushes/new.html.erb
+++ b/app/views/pushes/new.html.erb
@@ -1,7 +1,15 @@
 <% provide(:title, 'Push') %>
 <h1>Push</h1>
-<p>Push updates to Pocket</p>
 <%= form_for @push do |f| %>
-  <%= f.submit "Tag long articles", class: "btn btn-large btn-primary" %>
+  <%= f.label :tags, "I want to tag" %>
+  <%= f.select :id, [['All','all'],['Long','long']] %>
+  <%= f.label :operation, "text articles that take" %>
+  <%= f.select :id, [['Over','over'],['Under','under']] %>
+  <%= f.number_field :id %>
+  <%= f.label :length, "minutes to read with the tag" %>
+  <%= f.select :id, [['Long','long'],['Short','short']] %>
+  <%= f.submit "Save", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Save and Run", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Save and Create New", class: "btn btn-large btn-primary" %>
 <% end %>
 
