--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Create new tagger", push_path %></li>
-                <li><%= link_to "Manage existing taggers", '#' %></li>
+                <li><%= link_to "Manage existing taggers", pushes_path %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Tag Analysis", '#' %></li>
               </ul>
