--- a/app/views/pushes/index.html.erb
+++ b/app/views/pushes/index.html.erb
@@ -1,3 +1,11 @@
 <% provide(:title, 'All Taggers') %>
 <h1>All taggers</h1>
 
+<%= will_paginate %>
+
+<ul class="pushes">
+  <%= render @pushes %>
+</ul>
+
+<%= will_paginate %>
+
