--- a/app/views/pushes/new.html.erb
+++ b/app/views/pushes/new.html.erb
@@ -1,15 +1,19 @@
 <% provide(:title, 'Push') %>
 <h1>Push</h1>
 <%= form_for @push do |f| %>
-  <%= f.label :source_tag_name, "I want to tag" %>
-  <%= f.select :source_tag_name, [['All','all'],['Long','long']] %>
-  <%= f.label :comparator, "text articles that take" %>
-  <%= f.select :comparator, [['Over','over'],['Under','under']] %>
-  <%= f.number_field :article_length%>
-  <%= f.label :article_length, "minutes to read with the tag" %>
-  <%= f.select :destination_tag_name, [['Long','long'],['Short','short']] %>
-  <%= f.submit "Save", class: "btn btn-large btn-primary" %>
-  <%= f.submit "Save and Run", class: "btn btn-large btn-primary" %>
-  <%= f.submit "Save and Create New", class: "btn btn-large btn-primary" %>
+  <div>
+    <font size="4">
+    I want to tag   
+    <%= f.select(:source_tag_name, ['All','Long'], {}, { :class => "dropdown" }) %> 
+    articles
+    <%= f.select(:comparator, ['Under','Over'], {}, { :class => "dropdown" }) %>
+    <%= f.number_field :article_length, :class => "number" %>
+    minutes to read with the tag
+    <%= f.select(:destination_tag_name, ['Long','Short'], {}, { :class => "dropdown" }) %>
+    </font>
+  </div>
+  <%= f.submit "Save", class: "btn btn-small btn-primary" %>
+  <%= f.submit "Save and Run", class: "btn btn-small btn-primary" %>
+  <%= f.submit "Save and Create New", class: "btn btn-small btn-primary" %>
 <% end %>
 
