Adding user tag retrieval method

--- a/app/views/pushes/new.html.erb
+++ b/app/views/pushes/new.html.erb
@@ -4,9 +4,9 @@
   <div>
     <font size="4">
     I want to tag   
-    <%= f.select(:source_tag_name, ['All','Long'], {}, { :class => "dropdown" }) %> 
+    <%= f.select(:source_tag_name, current_user.get_tags, {}, { :class => "dropdown" }) %> 
     articles
-    <%= f.select(:comparator, ['Under','Over'], {}, { :class => "dropdown" }) %>
+    <%= f.select(:comparator, ['Over','Under'], {}, { :class => "dropdown" }) %>
     <%= f.number_field :article_length, :class => "number" %>
     minutes to read with the tag
     <%= f.select(:destination_tag_name, ['Long','Short'], {}, { :class => "dropdown" }) %>
