--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,6 @@
-<%= link_to gravatar_for(current_user, size: 52), current_user %>
+<% unless current_user.email.blank? %>
+  <%= link_to gravatar_for(current_user, size: 52), current_user %>
+<% end %>
 <h1>
   <%= current_user.uid %>
 </h1>
