--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,8 +7,10 @@
       <%= render 'fields', f: f %>
       <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
-
-    <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails" target="_blank">change</a>
+    
+    <% unless @user.email.blank? %>
+      <%= gravatar_for @user %>
+      <a href="http://gravatar.com/emails" target="_blank">change</a>
+    <% end %>
   </div>
 </div>
