--- a/app/views/pushes/new.html.erb
+++ b/app/views/pushes/new.html.erb
@@ -10,7 +10,7 @@
     <%= f.select(:comparator, ['Over','Under'], {}, { :class => "dropdown" }) %>
     <%= f.number_field :article_length, :class => "number" %>
     minutes to read with the tag
-    <%= f.select(:destination_tag_name, current_user.get_tags, {}, { :class => "dropdown" }) %>
+    <%= f.text_field :destination_tag_name, :class => "tag" %>
     </font>
   </div>
   <%= f.submit "Save", class: "btn btn-small btn-primary" %>
