--- a/app/views/pushes/new.html.erb
+++ b/app/views/pushes/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Push') %>
-<h1>Push</h1>
+<h1>New Rule</h1>
 <%= form_for @push do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div>
