--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -5,7 +5,7 @@
   <%= current_user.uid %>
 </h1>
 <span>
-  <%= link_to "view my profile", current_user %>
+  <%#= link_to "view my profile", current_user %>
   <p> Last update:
     <% if current_user.fetches.maximum(:created_at).nil? %>
       Never
