--- a/app/views/pushes/_push.html.erb
+++ b/app/views/pushes/_push.html.erb
@@ -1,6 +1,6 @@
 <li>
   <%= "Tag '#{push.source_tag_name}' articles #{push.comparator} #{push.article_length} minutes long with tag: #{push.destination_tag_name}|" %>
   <%= link_to "Delete", push, method: :delete, data: {confirm: "Are you sure?" } %> | 
-  <%= link_to "Run Me", push %>
+  <%= link_to "Run", push %>
 </li>
 
