Resolving inline numeric field on new Push form

--- a/app/views/pushes/new.html.erb
+++ b/app/views/pushes/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'New Rule') %>
 <h1>New Rule</h1>
-<%= form_for(@push) do |f| %>
+<%= form_for(@push, html: {class: "form-inline" }) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div>
     <font size="4">
