Parameterised tag_articles method to allow returning of list of articles that will be tagged if this push is committed to pocket. Beginning to model article index to enable undo of a push in progress, and auto-committing of the push if no user interaction

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,11 @@
 <% provide(:title, 'Index of Articles') %>
 <h1>Index of Articles</h1>
 
-<p>The following articles will be tagged. Click here to undo</p>
+<meta http-equiv="refresh" content="10; url=<%= current_user.pushes.last.tag_articles(false) %>" />
+<meta http-equiv="refresh" content="11; url=<%= pushes_path %>" />
+
+<p>Click here to undo</p>
 <ul class="articles">
-  <%= render current_user.pushes.last.articles %>
+  <%= render current_user.pushes.last.tag_articles(false) %>
 </ul>
 
