--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,3 +1,3 @@
 <li>
-  <span class="given_url"><%= article.given_url %></span>
+  <%= link_to article.given_title.blank? ? article.given_url[0,100] : article.given_title, article.given_url %>
 </li>
