--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,8 +13,6 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Create new rule", new_push_path %></li>
                 <li><%= link_to "Manage existing rules", pushes_path %></li>
-                <!--li class="divider"></li>
-                <li><%= link_to "Tag Analysis", '#' %></li-->
               </ul>
             </li>
             <li id="fat-menu" class="dropdown">
@@ -24,6 +22,7 @@
               <ul class="dropdown-menu">
 <!--                <li><%= link_to "Profile", current_user %></li> -->
                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                <li><%= link_to "Tag Analysis", tags_path %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
               </ul>
